--- a/03- CSS Flexbox/12- Sample/code/styles/index.css
+++ b/03- CSS Flexbox/12- Sample/code/styles/index.css
@@ -89,39 +89,43 @@ body {
 
   main {
     > .container {
-      text-align: center;
+      &:first-child {
+        margin-block-start: 2rem;
 
-      > span {
-        text-transform: uppercase;
-      }
+        text-align: center;
 
-      h2 {
-        margin-block: 1rem 3rem;
-      }
-
-      > ul {
-        max-inline-size: min(60rem, 100%);
-
-        margin-inline: auto;
-
-        margin-block-end: 3rem;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-
-        > li {
-          display: grid;
-          gap: 1rem;
+        > span {
+          text-transform: uppercase;
         }
-      }
 
-      img {
-        max-inline-size: 25rem;
-        block-size: auto;
+        h2 {
+          margin-block: 1rem 5rem;
+        }
 
-        margin-inline: auto;
+        > ul {
+          max-inline-size: min(60rem, 100%);
+
+          margin-inline: auto;
+
+          margin-block-end: 3rem;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 1rem;
+
+          > li {
+            display: grid;
+            gap: 1rem;
+          }
+        }
+
+        img {
+          max-inline-size: 25rem;
+          block-size: auto;
+
+          margin-inline: auto;
+        }
       }
     }
 
@@ -197,6 +201,36 @@ body {
 
         > ul.companies {
           margin-block-start: 2.5rem;
+        }
+      }
+    }
+
+    > .container {
+      margin-block-start: 2rem;
+
+      &:last-child {
+        text-align: center;
+
+        > span {
+          text-transform: uppercase;
+        }
+
+        h2 {
+          margin-block: 1rem 5rem;
+        }
+
+        .portfolio {
+          display: flex;
+          flex-wrap: wrap;
+          align-items: center;
+          justify-content: center;
+          gap: 1rem;
+
+          img {
+            flex-basis: 20rem;
+
+            object-fit: cover;
+          }
         }
       }
     }
