--- a/04- CSS Grid/09/code/style/index.css
+++ b/04- CSS Grid/09/code/style/index.css
@@ -1,55 +1,66 @@
 body {
-  min-height: 100dvh;
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
 
-main {
-  background: var(--primary) linear-gradient(to top left, #fff, var(--primary));
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  main {
+    background: var(--primary)
+      linear-gradient(to top left, #fff, var(--primary));
 
-#playground {
-  padding: 1rem;
-}
+    display: grid;
+    place-content: center;
+  }
 
-#playground #playground-title {
-  margin-bottom: 1rem;
-}
+  section {
+    padding: 1rem;
 
-.container {
-  height: 40vh;
-  display: grid;
-  grid-template-columns: min-content max-content;
-  grid-template-rows: 4rem 4rem 4rem;
-  align-content: space-between;
-}
+    #playground-title {
+      margin-block-end: 1rem;
+    }
 
-.container .item {
-  font-size: large;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+    .container {
+      block-size: 40vh;
 
-.un {
-  background-color: #ffc300;
-}
-.deux {
-  background-color: #ff5733;
-}
-.trois {
-  background-color: #daf7a6;
-}
-.quatre {
-  background-color: #2874a6;
-}
-.cinq {
-  background-color: #aed6f1;
-}
-.six {
-  background-color: #1b4f72;
+      display: grid;
+      grid-template-columns: min-content max-content;
+      grid-template-rows: 4rem 4rem 4rem;
+      align-content: space-between;
+
+      .item {
+        padding: 1rem;
+
+        display: grid;
+        place-content: center;
+
+        font-size: large;
+        font-weight: bold;
+      }
+
+      .un {
+        background-color: #ffc300;
+      }
+
+      .deux {
+        background-color: #ff5733;
+      }
+
+      .trois {
+        background-color: #daf7a6;
+      }
+
+      .quatre {
+        background-color: #2874a6;
+      }
+
+      .cinq {
+        background-color: #aed6f1;
+      }
+
+      .six {
+        background-color: #1b4f72;
+      }
+    }
+  }
 }
