--- a/04- CSS Grid/11/code/style/index.css
+++ b/04- CSS Grid/11/code/style/index.css
@@ -1,58 +1,66 @@
 body {
-  min-height: 100dvh;
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
 
-main {
-  background: var(--primary) linear-gradient(to top left, #fff, var(--primary));
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  main {
+    background: var(--primary)
+      linear-gradient(to top left, #fff, var(--primary));
 
-#playground {
-  padding: 1rem;
-}
+    display: grid;
+    place-content: center;
+  }
 
-#playground #playground-title {
-  margin-bottom: 1rem;
-}
+  section {
+    padding: 1rem;
 
-.container {
-  height: 50dvh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-}
+    #playground-title {
+      margin-block-end: 1rem;
+    }
 
-.container .item {
-  padding: 1rem;
-  text-align: center;
-  font-size: large;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+    .container {
+      block-size: 50vh;
+      block-size: 50dvh;
 
-.un {
-  background-color: #ffc300;
-  grid-column: 1 / span 2;
-}
-.deux {
-  background-color: #ff5733;
-}
-.trois {
-  background-color: #daf7a6;
-  grid-row: 2 / span 3;
-}
-.quatre {
-  background-color: #2874a6;
-}
-.cinq {
-  background-color: #aed6f1;
-}
-.six {
-  background-color: #1b4f72;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+
+      .item {
+        padding: 1rem;
+
+        display: grid;
+        place-content: center;
+
+        font-size: large;
+        font-weight: bold;
+      }
+
+      .un {
+        background-color: #ffc300;
+      }
+
+      .deux {
+        background-color: #ff5733;
+      }
+
+      .trois {
+        background-color: #daf7a6;
+      }
+
+      .quatre {
+        background-color: #2874a6;
+      }
+
+      .cinq {
+        background-color: #aed6f1;
+      }
+
+      .six {
+        background-color: #1b4f72;
+      }
+    }
+  }
 }
