--- a/04- CSS Grid/14/code/style/index.css
+++ b/04- CSS Grid/14/code/style/index.css
@@ -25,7 +25,7 @@ body {
       max-block-size: 70dvh;
 
       display: grid;
-      align-content: center;
+      align-items: center;
       grid-template: repeat(3, 4rem) / repeat(2, 1fr);
 
       .item {
