--- a/04- CSS Grid/22- Calculator/code/style/index.css
+++ b/04- CSS Grid/22- Calculator/code/style/index.css
@@ -1,77 +1,76 @@
 body {
-  height: 100dvh;
+  block-size: 100vh;
+  block-size: 100dvh;
+
   display: grid;
   justify-items: center;
   align-items: center;
-}
 
-.wrapper {
-  width: 25%;
-}
+  main {
+    inline-size: 25%;
 
-.row {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  height: 3rem;
-}
+    .screen {
+      block-size: 4rem;
 
-.screen,
-.btn {
-  font-size: large;
-  font-weight: bold;
-  border: 1px solid black;
-}
+      background-color: black;
+      color: white;
 
-.screen {
-  height: 4rem;
-  background-color: black;
-  color: white;
-  padding: 1rem;
-}
+      padding: 1rem;
+    }
 
-.btn {
-  background-color: var(--gray-500);
-  color: black;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
+    .screen,
+    .button {
+      font-size: large;
+      font-weight: bold;
 
-.operation {
-  background-color: var(--primary);
-  color: white;
-}
+      border: 1px solid black;
+    }
 
-.double {
-  grid-column: 1 / span 2;
-}
+    .buttons {
+      .row {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
 
-.triple {
-  grid-column: 1 / span 3;
-}
+        block-size: 3rem;
 
-.arrow {
-  font-size: xx-large;
-}
+        .button {
+          background-color: var(--gray-500);
+          color: black;
 
-.animate {
-  animation: resize 0.1s;
-  -webkit-animation: resize 0.1s;
+          display: grid;
+          place-content: center;
+        }
+
+        .animate {
+          animation: resize 0.1s;
+        }
+        
+        .operation {
+          background-color: var(--primary);
+          color: white;
+        }
+
+        .double {
+          grid-column: 1 / span 2;
+        }
+
+        .triple {
+          grid-column: 1 / span 3;
+        }
+
+        .arrow {
+          font-size: xx-large;
+        }
+      }
+    }
+  }
 }
 
 @keyframes resize {
   from {
     transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-}
+  }
   to {
     transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
   }
 }
